<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.axs</groupId>
	<artifactId>de-axs-utils</artifactId>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.1.0</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.3.3</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.media</groupId>
			<artifactId>jai-codec</artifactId>
			<version>1.1.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.1-jre</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.commons</groupId> -->
		<!-- <artifactId>commons-collections4</artifactId> -->
		<!-- <version>4.3</version> -->
		<!-- </dependency> -->
		<!-- https://mvnrepository.com/artifact/net.java.dev.stax-utils/stax-utils -->
		<dependency>
			<groupId>net.java.dev.stax-utils</groupId>
			<artifactId>stax-utils</artifactId>
			<version>20070216</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.bea.xml/jsr173-ri -->
	</dependencies>
	<repositories>
		<repository>
			<id>thirdparty-releases</id>
			<name>JBoss Thirdparty Releases</name>
			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
		</repository>
	</repositories>
	<version>1.0.0</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>src\main\resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src\test\resources</directory>
			</testResource>
		</testResources>
		<!-- Entweder das hier ODER das oben in properties -> maven.compiler.source 
			und maven.compiler.target -->
		<!-- <pluginManagement> -->
		<!-- <plugins> -->
		<!-- <plugin> -->
		<!-- <groupId>org.apache.maven.plugins</groupId> -->
		<!-- <artifactId>maven-compiler-plugin</artifactId> -->
		<!-- <version>3.8.1</version> -->
		<!-- <configuration> -->
		<!-- <source>1.8</source> -->
		<!-- <target>1.8</target> -->
		<!-- </configuration> -->
		<!-- </plugin> -->
		<!-- </plugins> -->
		<!-- </pluginManagement> -->
	</build>
	<name>de-axs-utils</name>
</project>